# maedic

./: .dockerignore  Cargo.locky  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  base.yaml  compose.yaml  ecosystem.config.js  pw652_extended.sql
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml
config/: base.yaml
configuration/: base.yaml  test.yaml
settings/: base.yaml  test.yaml
src/: checks.rs  configuration.rs  database.rs  error.rs  handler.rs  health.rs  indicators.rs  lib.rs  main.rs  metrics.rs  run.rs  telemetry.rs
src/model/: card.rs  hi_queue.rs  mod.rs  panel.rs  spoolfile.rs  table.rs
tests/: bad_config.yaml  cli.rs
tests/api/: health_check.rs  helpers.rs  metrics.rs  mod.rs  rate_limit.rs
tests/db/: health_check.rs  helpers.rs
tests/migrations/: V2__pw652_create_tables.sql
tests/migrations/V652/: V1__pw652_create_types.sql
tests/migrations/V652SP1/: V1__DataTypes.sql  V2__CreateTables.sql
tests/migrations/V66SP1/: V1__DataTypes.sql  V2__CreateTables.sql  V2__UserDefinedTables.sql  V5__Indexes.sql
