[package]
name = "maedic"
version = "0.4.1"
edition = "2024"


[lib]
path = "src/lib.rs"

[[bin]]
path= "src/main.rs"
name = "maedic"

[dependencies]
anyhow = "1.0.100"
axum = {version = "0.8.8", features = ["tokio", "macros", "json"]}
bb8 = "0.9.1"
bb8-tiberius = "0.16.0"
config = {version = "0.15.19", features = ["yaml"]}
rstest = "0.26.1"
secrecy = {version = "0.10.3", features = ["serde"]}
serde = "1.0.228"
serde-aux = "4.7.0"
sysinfo = "0.37.2"
thiserror = "2.0.18"
tiberius = {version = "0.12.3", features = ["rustls"], default-features = false}
tokio = {version = "1.49.0", features = ["rt-multi-thread", "macros"]}
tokio-util = { version = "0.7.18", features = ["compat"]}
tower_governor = "0.8.0"
tower-http = {version = "0.6.8", features= ["trace", "request-id"]}
tracing = {version="0.1.44", features = ["std", "attributes"]}
tracing-subscriber = {version = "0.3.22", features = ["json", "std", "env-filter", "registry", "fmt"]}
uuid = {version = "1.20.0", features = ["v4"]}

[dev-dependencies]
refinery = {version = "0.9.0", features = ["tiberius"]}
reqwest = {version = "0.13.1", features = ["json", "rustls", "cookies"]}
once_cell = "1.21.3"
