[package]
name = "maedic"
version = "0.5.1"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "maedic"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["json", "macros", "tokio"] }
bb8 = "0.9.1"
bb8-tiberius = "0.16.0"
config = { version = "0.15.24", features = ["yaml"] }
prometheus-client = "0.25.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.228"
serde-aux = "4.7.0"
strum = "0.28.0"
strum_macros = "0.28.0"
sysinfo = "0.39.5"
thiserror = "2.0.18"
tiberius = { version = "0.12.3", default-features = false, features = ["integrated-auth-gssapi", "rustls", "winauth"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tower = { version = "0.5.3", features = ["timeout"] }
tower_governor = "0.8.0"
tower-http = { version = "0.7.0", features = ["request-id", "trace"] }
tracing = { version = "0.1.44", features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json", "registry", "std"] }
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.2.2"
once_cell = "1.21.4"
predicates = "3.1.4"
rstest = "0.26.1"
refinery = { version = "0.9.2", features = ["tiberius"] }
reqwest = { version = "0.13.4", features = ["cookies", "json", "rustls"] }
